web-frontend/modules/core/assets/scss/components/row_modal.scss
.row-modal__title {
  min-height: 29px;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.row-modal__field-list {
  list-style: none;
  margin: 8px 0 0;
  padding: 0;
}

.row-modal__field-item {
  margin-bottom: 20px;
  padding: 0;
  position: relative;
}

.row-modal__field-item-icon {
  color: $palette-neutral-600;
}

.row-modal__field-item-handle {
  width: 12px;
  height: 16px;
  position: relative;
  top: 1px;
  display: inline-block;
  margin-right: 4px;
  background-image: radial-gradient($color-neutral-200 40%, transparent 40%);
  background-size: 4px 4px;
  background-repeat: repeat;
  cursor: grab;

  &:hover {
    background-image: radial-gradient($color-neutral-500 40%, transparent 40%);
  }
}

.row-modal__hidden-separator {
  display: flex;
  margin-top: 20px;
  margin-bottom: 30px;
  gap: 10px;
}

.row-modal__hidden-separator-line {
  flex: 1;
  height: 0;
  margin: auto;
  border-bottom: 1px solid $color-neutral-200;
}

.row-modal__hidden-separator-link {
  color: $color-neutral-900;
  padding: 8px;
  border: 1px solid $color-neutral-200;

  &:hover {
    cursor: pointer;
    text-decoration: none;
    background-color: $color-neutral-100;
  }

  &--disabled:hover {
    cursor: inherit;
    background-color: transparent;
  }

  & i {
    margin-left: 10px;
  }
}

.row-modal__add-field {
  display: inline-block;
  margin: 12px 0 6px 4px;

  @include flex-align-items(4px);

  &:hover {
    text-decoration: none;
    color: $color-neutral-900;
  }
}

.row-modal__add-field-icon {
  font-size: 20px;
}

.row-modal__choose-button {
  position: absolute;
  right: 0;
  top: -4px;
  display: block;
}

